--- a/lesson3驟榊ｸ・cake/cake.html
+++ b/lesson3驟榊ｸ・cake/cake.html
@@ -7,20 +7,23 @@
 </head>
 
 <body>
-
 <div class="shop">
 <img src="images/shop.jpg">
 </div>
+<h2>ショートケーキ</h2>
 <div class="cakes">
 <img src="images/cake01.jpg">
 </div>
 <div class="cakes">
+<h2>モンブラン</h2>
 <img src="images/cake02.jpg">
 </div>
 <div class="cakes">
+<h2>ザッハトルテ</h2>
 <img src="images/cake03.jpg">
 </div>
 <div class="cakes">
+<h2>シュークリーム</h2>
 <img src="images/cake04.jpg">
 </div>
 
