--- a/lesson3驟榊ｸ・cake/cake.html
+++ b/lesson3驟榊ｸ・cake/cake.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div class="wrap">
 <div class="shop">
 <img src="images/shop.jpg">
 </div>
@@ -25,6 +26,7 @@
 <div class="cakes">
 <h2>シュークリーム</h2>
 <img src="images/cake04.jpg">
+</div>
 </div>
 
 
