--- a/lesson3驟榊ｸ・cake/cake.html
+++ b/lesson3驟榊ｸ・cake/cake.html
@@ -14,8 +14,7 @@
 <div class="cakes">
 <h2>ショートケーキ</h2>
 <img src="images/cake01.jpg">
-<p>イチゴがのった一番人気のスポンジケーキです。大人から子供まで、年中愛されるケーキです。
-</p>
+<p>イチゴがのった一番人気のスポンジケーキです。大人から子供まで、年中愛されるケーキです。</p>
 </div>
 <div class="cakes">
 <h2>モンブラン</h2>
@@ -25,14 +24,12 @@
 <div class="cakes">
 <h2>ザッハトルテ</h2>
 <img src="images/cake03.jpg">
-<p>こってりとしたチョコレートの濃厚な味わい
-</p>
+<p>こってりとしたチョコレートの濃厚な味わい</p>
 </div>
 <div class="cakes">
 <h2>シュークリーム</h2>
 <img src="images/cake04.jpg">
-<p>サクサク生地と濃厚クリームは相性抜群
-</p>
+<p>サクサク生地と濃厚クリームは相性抜群</p>
 </div>
 </div>
 
