--- a/lesson3驟榊ｸ・cake/cake.html
+++ b/lesson3驟榊ｸ・cake/cake.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrap">
 <div class="shop">
-<img class="top" src="images/shop.jpg">
+<img src="images/shop.jpg">
 </div>
 <div class="cakes">
 <h2>ショートケーキ</h2>
